cabal-version:      2.4
name:               qpl-parser
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ben Eyal
maintainer:         ben.eyal.89@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
  exposed-modules:  Parse

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  ghc-options:      -W -Wall
  build-depends:
    , attoparsec
    , base                  ^>=4.16.4.0
    , containers
    , mtl
    , parsers
    , text
    , transformers
    , unordered-containers

  hs-source-dirs:   src
  default-language: GHC2021

executable qpl-parser
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , aeson
    , async
    , attoparsec
    , base            ^>=4.16.4.0
    , qpl-parser
    , bytestring
    , mtl
    , parsers
    , servant
    , servant-server
    , stm
    , text
    , tokenizers
    , transformers
    , wai
    , warp
    , unordered-containers

  hs-source-dirs:   app
  default-language: GHC2021

test-suite qpl-parser-testsuite
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  build-depends:
    , attoparsec
    , base         ^>=4.16.4.0
    , qpl-parser
    , tasty
    , tasty-hunit
    , text
    , unordered-containers

  hs-source-dirs:   tests
  default-language: GHC2021
